Стилизует меню в шапке и блок program-banner на трех макетах

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -23,7 +23,7 @@
   padding-top: 12px;
 }
 
-@media (min-width: @tablet-width) {
+@media screen and (min-width: @tablet-width) {
   .page-header {
     flex-direction: row;
     justify-content: space-between;
@@ -33,12 +33,12 @@
 
   .page-header__logo {
     width: 177px;
-    margin: 0;
+    margin-top: 24px;
     padding: 0;
   }
 }
 
-@media (min-width: @desktop-width) {
+@media screen and (min-width: @desktop-width) {
   .page-header {
     width: 1220px;
     padding: 0 40px 0 40px;
