--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -3,6 +3,7 @@
 }
 
 .main-nav__list {
+  .reset-list();
   width: 320px;
   margin: 0 auto;
   border-top: 1px solid #e6e6e6;
@@ -62,7 +63,7 @@
   }
 }
 
-@media (max-width: @mobile-width-only) {
+@media screen and (max-width: @mobile-width-only) {
   .main-nav--closed .site-list__item {
     display: none;
   }
@@ -72,7 +73,11 @@
   }
 }
 
-@media (min-width: @tablet-width) {
+@media screen and (min-width: @tablet-width) {
+  .main-nav {
+    padding: 43px 0 0 0;
+  }
+
   .main-nav__list {
     width: 440px;
     border: none;
@@ -83,7 +88,11 @@
   }
 }
 
-@media (min-width: @desktop-width) {
+@media screen and (min-width: @desktop-width) {
+  .main-nav {
+    padding: 74px 0 0 0;
+  }
+
   .main-nav__list {
     width: 480px;
   }
