Черновая стилизация блока как это работает на всех версиях

--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -77,6 +77,10 @@
   padding: 10px 20px 0 20px;
 }
 
+.categories__text br {
+  display: none;
+}
+
 .categories-button {
   position: relative;
   display: block;
@@ -120,6 +124,10 @@
     font-size: 16px;
     line-height: 24px;
     padding: 11px 275px 0 53px;
+  }
+
+  .categories__text br {
+    display: inline;
   }
 
   .categories__heading--slim {
