--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -22,6 +22,15 @@
   font-family: @font-family-content;
 }
 
+.how-it-works__item p {
+  padding: 0;
+  margin: 0;
+}
+
+.how-it-works__item br {
+  display: none;
+}
+
 .how-it-works__item:nth-child(1)::before {
   .how-it-works-icon();
   background-image: url("../img/advantage-leaf@1x.png");
@@ -42,36 +51,72 @@
   background-image: url("../img/advantage-clock@1x.png");
 }
 
-@media (min-width: @tablet-width) {
+@media screen and (min-width: @tablet-width) {
   .how-it-works {
     width: 708px;
     padding: 0 30px 0 30px;
+    border-bottom: 1px solid #e6e6e6;
+  }
+
+  .how-it-works__heading {
+    font-size: 60px;
+    margin: 45px 0 65px 0;
   }
 
   .how-it-works__list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   .how-it-works__item {
     width: 324px;
-    padding: 100px 0 0 0;
+    padding: 119px 0 0 0;
+    margin-bottom: 128px;
+    font-size: 16px;
+    line-height: 24px;
   }
 
-  .how-it-works__item::before {
+  .how-it-works__item p {
+    width: 250px;
+  }
+
+  .how-it-works__item br {
+    display: inline;
+  }
+
+  .how-it-works__item:nth-child(1)::before {
+    top: 5px;
+    left: 0;
+    width: 80px;
+    height: 80px;
+  }
+
+  .how-it-works__item:nth-child(2)::before {
+    width: 80px;
+    height: 80px;
+  }
+
+  .how-it-works__item:nth-child(3)::before {
+    width: 80px;
+    height: 80px;
+  }
+
+  .how-it-works__item:nth-child(4)::before {
     width: 80px;
     height: 80px;
   }
 }
 
-@media (min-width: @desktop-width) {
+@media screen and (min-width: @desktop-width) {
   .how-it-works {
     width: 1220px;
     padding: 0 40px 0 40px;
+    border: none;
   }
 
-  .how-it-works__list {
-    justify-content: space-between;
+  .how-it-works__heading {
+    margin: 72px 0 65px 0;
   }
 
   .how-it-works__item {
