--- a/source/less/blocks/real-example.less
+++ b/source/less/blocks/real-example.less
@@ -6,7 +6,7 @@
 .real-example__history {
   width: 280px;
   padding: 0 20px 0 20px;
-  margin: 0 auto;
+  margin: 0 auto 33px auto;
 }
 
 .real-example__heading {
@@ -24,13 +24,13 @@
   display: flex;
   justify-content: space-between;
   padding: 0;
-  margin: 0;
+  margin: 24px 0 20px 0;
 }
 
 .real-example__value {
   display: block;
-  width: 125px;
-  padding: 15px 0 15px 0;
+  width: 123px;
+  padding: 13px 0 16px 0;
   font-family: @font-family-base;
   font-size: 24px;
   line-height: 24px;
@@ -42,9 +42,9 @@
 
 .real-example__field {
   display: block;
-  width: 100px;
+  width: 90px;
   padding: 0;
-  margin: -10px 0 0 15px;
+  margin: -8px 0 0 15px;
   font-size: 12px;
   line-height: 12px;
   text-transform: lowercase;
@@ -54,7 +54,7 @@
 
 .real-example__totals {
   display: block;
-  margin-left: 8px;
+  margin-left: 3px;
   font-family: @font-family-base;
   line-height: 20px;
   text-transform: uppercase;
@@ -95,7 +95,11 @@
   border-radius: 10px;
 }
 
-.real-example__toogle-beaore,
+.real-example__totals br {
+  display: none;
+}
+
+.real-example__toogle-before,
 .real-example__toogle-after {
   width: 35px;
   height: 6px;
@@ -113,18 +117,68 @@
   cursor: pointer;
 }
 
-@media (min-width: @tablet-width) {
+@media screen and (min-width: @tablet-width) {
   .real-example__history {
     width: 708px;
     padding: 0 30px 0 30px;
   }
 
+  .real-example__heading {
+    font-size: 60px;
+  }
+
+  .real-example__text {
+    width: 680px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
   .real-example__wrapper-stats {
     display: flex;
+    justify-content: space-between;
+  }
+
+  .real-example__wrapper-item {
+    margin-right: 42px;
+  }
+
+  .real-example__value {
+    width: 162px;
+    font-size: 30px;
+    line-height: 37px;
+    color: @color-black;
+  }
+
+  .real-example__field {
+    width: 134px;
+    font-size: 14px;
+    line-height: 14px;
+    background-color: @color-white;
+  }
+
+  .real-example__field br {
+    display: none;
+  }
+
+  .real-example__totals {
+    margin-top: 40px;
+    font-size: 20px;
+    line-height: 20px;
+    color: @color-black;
+    text-align: right;
+  }
+
+  .real-example__totals br {
+    display: inline;
+  }
+
+  .real-example__totals span {
+    display: block;
+    padding: 5px;
   }
 }
 
-@media (min-width: @desktop-width) {
+@media screen and (min-width: @desktop-width) {
   .real-example {
     display: flex;
     background-color: @color-white;
