Черновая стилизация сетки каталога на мобилке

--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -2,6 +2,7 @@
   font-family: @font-family-base;
   font-size: 24px;
   line-height: 24px;
+  font-weight: 400;
   color: @color-black;
 }
 
@@ -21,6 +22,7 @@
   font-family: @font-family-base;
   font-size: 16px;
   line-height: 16px;
+  font-weight: 400;
   color: #222222;
   text-transform: uppercase;
 }
@@ -35,7 +37,12 @@
 }
 
 .additional-products__characteristics {
+  width: 100%;
   line-height: 14px;
+}
+
+.additional-products__value {
+  text-align: right;
 }
 
 @media (min-width: @tablet-width) {
