--- a/source/less/blocks/more-products.less
+++ b/source/less/blocks/more-products.less
@@ -1,6 +1,12 @@
+.more-products {
+  text-align: center;
+}
+
 .more-product__all-goods {
+  font-family: @font-family-base;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 400;
   color: @color-black;
   text-transform: uppercase;
 }
@@ -11,7 +17,11 @@
 }
 
 .more-product__button {
+  display: block;
+  width: 100%;
+  padding: 10px 0 10px 0;
   font-size: 16px;
   line-height: 20px;
   color: #222222;
+  text-decoration: none;
 }
