--- a/source/less/blocks/card-product.less
+++ b/source/less/blocks/card-product.less
@@ -1,13 +1,26 @@
+.card-product__item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .card-product__heading {
   font-family: @font-family-base;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 400;
   color: @color-black;
+  text-transform: uppercase;
 }
 
 .card-product__product-characteristics {
+  width: 140px;
   font-size: 12px;
   line-height: 16px;
+}
+
+.card-product__value {
+  text-align: right;
 }
 
 .card-product__button {
