Исправляет по замечаниям в несоответствии критериям

--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -81,7 +81,7 @@
   display: none;
 }
 
-.categories-button {
+.categories__button {
   position: relative;
   display: block;
   padding: 20px 150px 20px 0;
@@ -96,7 +96,7 @@
   border-top: 1px solid #d9d9d9;
 }
 
-.categories-button::after {
+.categories__button::after {
   content: "";
   position: absolute;
   top: 23px;
@@ -166,7 +166,7 @@
     }
   }
 
-  .categories-button {
+  .categories__button {
     padding: 20px 529px 63px 0;
     margin: 35px 0 0 53px;
     font-size: 20px;
@@ -175,7 +175,7 @@
     cursor: pointer;
   }
 
-  .categories-button::after {
+  .categories__button::after {
     top: 25px;
     left: 130px;
   }
@@ -242,12 +242,12 @@
     }
   }
 
-  .categories-button {
+  .categories__button {
     padding: 15px 387px 63px 0;
     margin: 0 0 0 53px;
   }
 
-  .categories-button::after {
+  .categories__button::after {
     top: 20px;
     left: 132px;
   }
