--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -3,9 +3,27 @@
 }
 
 .contacts__cooperation {
+  display: flex;
+  justify-content: space-between;
   width: 280px;
   padding: 0 20px 0 20px;
   margin: 0 auto;
+}
+
+.contacts__cooperation b {
+  width: 140px;
+  padding-top: 21px;
+  font-family: @font-family-base;
+  font-size: 16px;
+  line-height: 20px;
+  color: @color-black;
+  text-transform: uppercase;
+}
+
+.contacts__cooperation p {
+  width: 140px;
+  padding-top: 7px;
+  line-height: 20px;
 }
 
 .contacts__map {
