--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -64,7 +64,7 @@
 }
 
 @media screen and (max-width: @mobile-width-only) {
-  .main-nav--closed .site-list__item {
+  .main-nav--closed .site-list {
     display: none;
   }
 
