--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -1,3 +1,8 @@
+.additional-products {
+  width: 280px;
+  margin: 0 auto 39px auto;
+}
+
 .additional-products__title {
   font-family: @font-family-base;
   font-size: 24px;
@@ -45,7 +50,11 @@
   text-align: right;
 }
 
-@media (min-width: @tablet-width) {
+@media screen and (min-width: @tablet-width) {
+  .additional-products {
+    width: 708px;
+  }
+
   .additional-products__wrapper {
     display: flex;
     justify-content: space-between;
@@ -65,7 +74,7 @@
   }
 }
 
-@media (min-width: @desktop-width) {
+@media screen and (min-width: @desktop-width) {
   .additional-products {
     width: 895px;
   }
