--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,7 @@
 @import "global/mixins";
 @import "blocks/button";
 @import "blocks/label";
+@import "blocks/input";
 @import "blocks/desktop-header-background";
 @import "blocks/page-header";
 @import "blocks/main-nav";
@@ -13,7 +14,6 @@
 @import "blocks/how-it-works";
 @import "blocks/real-example";
 @import "blocks/contacts";
-@import "blocks/cooperation";
 @import "blocks/page-footer";
 @import "blocks/social";
 @import "blocks/copyright";
