--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,5 +1,8 @@
 .promo {
-  padding: 190px 20px 47px 20px;
+  position: relative;
+  width: 280px;
+  height: 290px;
+  margin: 0 auto 35px auto;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -7,17 +10,17 @@
 }
 
 .promo__slogan {
-  position: relative;
   display: block;
   width: 200px;
   margin: 0 auto;
+  padding-top: 185px;
   font-size: 16px;
   line-height: 20px;
   color: @color-white;
   text-align: center;
 }
 
-.promo__slogan::before {
+.promo::before {
   content: "";
   position: absolute;
   top: 0;
