--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -4,6 +4,7 @@
 }
 
 .additional-products__title {
+  margin: 27px 0 35px 0;
   font-family: @font-family-base;
   font-size: 24px;
   line-height: 24px;
@@ -24,6 +25,8 @@
 }
 
 .additional-products__heading {
+  margin: 12px 0 9px 0;
+  padding: 0;
   font-family: @font-family-base;
   font-size: 16px;
   line-height: 16px;
@@ -35,18 +38,25 @@
 .additional-products__button {
   display: block;
   width: 100%;
+  margin-top: 10px;
   margin-bottom: 17px;
   padding: 10px 0 10px 0;
+  font-family: @font-family-base;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
   text-align: center;
   text-decoration: none;
 }
 
 .additional-products__characteristics {
+  border-collapse: collapse;
   width: 100%;
   line-height: 14px;
 }
 
 .additional-products__value {
+  padding: 5px 0;
   text-align: right;
 }
 
