--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,12 +1,13 @@
 .contacts {
   position: relative;
+  background-color: @color-light-grey;
 }
 
 .contacts__cooperation {
   display: flex;
   justify-content: space-between;
   width: 280px;
-  padding: 0 20px 0 20px;
+  padding: 5px 20px 0 20px;
   margin: 0 auto;
 }
 
@@ -23,6 +24,7 @@
 .contacts__cooperation p {
   width: 140px;
   padding-top: 7px;
+  padding-bottom: 10px;
   line-height: 20px;
 }
 
