Стилизация каталога планшетной версии

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -34,9 +34,24 @@
 }
 
 @media (min-width: @tablet-width) {
+  .contacts {
+    margin-top: 75px;
+  }
+
   .contacts__cooperation {
-    width: 708px;
-    padding: 0 30px 0 30px;
+    width: 632px;
+    padding: 45px 68px;
     margin: 0 auto;
+  }
+
+  .contacts__cooperation b {
+    width: 155px;
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  .contacts__cooperation p {
+    width: 160px;
+    text-align: right;
   }
 }
