--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -34,10 +34,14 @@
 
 @media (min-width: @tablet-width) {
   .promo {
-    padding: 75px 27px 75px 420px;
+    width: 708px;
+    height: 200px;
+    margin-top: 65px;
   }
 
-  .promo-slogan {
+  .promo__slogan {
+    margin: 0 85px 0 auto;
+    padding-top: 72px;
     text-align: left;
   }
 }
