--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -65,22 +65,78 @@
     width: 708px;
   }
 
+  .additional-products__title {
+    position: relative;
+    width: 375px;
+    margin: -72px 0 80px 0;
+    padding-left: 37px;
+    font-size: 36px;
+    line-height: 36px;
+    background-color: @color-white;
+  }
+
+  .additional-products__title::before {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    top: 21px;
+    left: -37px;
+    width: 768px;
+    height: 3px;
+    background-color: @color-green;
+  }
+
+  .additional-products__list {
+    display: flex;
+    flex-direction: column;
+  }
+
   .additional-products__wrapper {
     display: flex;
     justify-content: space-between;
   }
 
+  .additional-products__item {
+    margin-bottom: 0;
+    padding: 27px 38px;
+    border: 1px solid #d9d9d9;
+  }
+
+  .additional-products__item:not(:last-of-type) {
+    border-bottom: none;
+  }
+
   .additional-products__heading {
-    width: 285px;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .additional-products__characteristics {
+    width: 287px;
+    margin: 0 0 5px 0;
+    padding: 0;
   }
 
   .additional-products__characteristics td {
-    padding-top: 17px;
     text-align: right;
   }
 
   .additional-products__field {
-    width: 132px;
+    width: 192px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .additional-products__value {
+    width: 95px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .additional-products__button {
+    margin-bottom: 0;
   }
 }
 
