--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -26,3 +26,16 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+@media screen and (min-width: @tablet-width) {
+  .copyright {
+    width: 162px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .copyright__link::after {
+    top: -7px;
+    left: 135px;
+  }
+}
