--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -15,14 +15,15 @@
 @media (min-width: @tablet-width) {
   .page-footer {
     flex-direction: row;
-    justify-content: space-between;
+    align-items: flex-end;
     width: 708px;
-    padding: 0 30px 0 30px;
+    padding: 64px 30px 62px 30px;
   }
 
   .page-footer__logo {
     margin: 0;
-    padding: 39px 0 62px 0;
+    margin-right: 105px;
+    padding: 0;
   }
 }
 
