--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -31,6 +31,9 @@
 
 @media (min-width: @tablet-width) {
   .social__list {
+    margin: 0;
+    margin-right: 50px;
+    padding: 0;
     border: none;
   }
 }
