--- a/source/less/blocks/card-product.less
+++ b/source/less/blocks/card-product.less
@@ -90,12 +90,10 @@
     justify-content: center;
     width: 324px;
     margin-top: -40px;
-    outline: 2px solid green;
   }
 
   .card-product__image {
     align-items: flex-end;
-    outline: 2px solid blue;
   }
 
   .card-product__heading {
@@ -137,6 +135,14 @@
 @media screen and (min-width: @desktop-width) {
   .card-product {
     width: 245px;
+  }
+
+  .card-product__image-wrap {
+    width: 245px;
+  }
+
+  .card-product__product-characteristics {
+    width: 170px;
   }
 
   .card-product__button {
