--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -26,6 +26,13 @@
   }
 
   .catalog-main__heading-page {
-    margin-left: 40px;
+    margin: 85px 0 163px 40px;
+  }
+
+  .catalog-main__wrapper-additional-products {
+    display: flex;
+    justify-content: space-between;
+    width: 1220px;
+    margin: 0 auto;
   }
 }
