--- a/source/less/blocks/more-products.less
+++ b/source/less/blocks/more-products.less
@@ -82,3 +82,16 @@
     margin: 0 auto 40px auto;
   }
 }
+
+@media screen and (min-width: @tablet-width) {
+  .more-products::after,
+  .more-products::before {
+    top: 85px;
+    left: 93px;
+    width: 60px;
+  }
+
+  .more-product__button {
+    width: 170px;
+  }
+}
