--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -12,7 +12,7 @@
   padding: 35px 0 30px 0;
 }
 
-@media (min-width: @tablet-width) {
+@media screen and (min-width: @tablet-width) {
   .page-footer {
     flex-direction: row;
     align-items: flex-end;
@@ -27,9 +27,9 @@
   }
 }
 
-@media (min-width: @desktop-width) {
+@media screen and (min-width: @desktop-width) {
   .page-footer {
     width: 1220px;
-    padding: 0 40px 0 40px;
+    padding: 60px 40px 60px 40px;
   }
 }
