--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -29,11 +29,18 @@
   background-image: url("../img/icon-fb-mobile.svg");
 }
 
-@media (min-width: @tablet-width) {
+@media screen and (min-width: @tablet-width) {
   .social__list {
     margin: 0;
     margin-right: 50px;
     padding: 0;
     border: none;
+  }
+}
+
+@media screen and (min-width: @tablet-width) {
+  .social__list {
+    margin-right: 390px;
+    margin-left: 200px;
   }
 }
