--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -38,7 +38,7 @@
   }
 }
 
-@media screen and (min-width: @tablet-width) {
+@media screen and (min-width: @desktop-width) {
   .social__list {
     margin-right: 390px;
     margin-left: 200px;
