--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -1,7 +1,16 @@
 .input {
+  position: relative;
   box-sizing: border-box;
   width: 100%;
   flex-shrink: 1;
-  padding: 15px 5px 15px 15px;
+  padding: 15px 15px 10px 14px;
   border: 1px solid #e6e6e6;
+}
+
+.input--icon-mail {
+  background: url("../img/icon-mail.svg") no-repeat 93% 50%;
+}
+
+.input--icon-phone {
+  background: url("../img/icon-phone.svg") no-repeat 93% 50%;
 }
