--- a/source/less/blocks/label.less
+++ b/source/less/blocks/label.less
@@ -29,3 +29,10 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
+@media screen and (min-width: @tablet-width) {
+  .label {
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
