Внесла исправления по замечаниям

--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -1,6 +1,8 @@
 .additional-products {
-  width: 280px;
-  margin: 0 auto 39px auto;
+  .container();
+  padding: 0 20px;
+  margin-top: 0;
+  margin-bottom: 39px;
 }
 
 .additional-products__title {
@@ -40,7 +42,7 @@
   width: 100%;
   margin-top: 10px;
   margin-bottom: 17px;
-  padding: 10px 0 10px 0;
+  padding: 10px 0;
   font-family: @font-family-base;
   font-size: 16px;
   line-height: 20px;
@@ -62,7 +64,7 @@
 
 @media screen and (min-width: @tablet-width) {
   .additional-products {
-    width: 708px;
+    padding: 0 30px;
   }
 
   .additional-products__title {
