--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -1,7 +1,6 @@
 .categories {
-  width: 280px;
+  .container();
   padding: 2px 20px 0 20px;
-  margin: 0 auto;
 }
 
 .categories__list {
@@ -110,8 +109,7 @@
 
 @media screen and (min-width: @tablet-width) {
   .categories {
-    width: 708px;
-    padding: 0 30px 0 30px;
+    padding: 0 30px;
   }
 
   .categories__heading {
@@ -183,8 +181,7 @@
 
 @media screen and (min-width: @desktop-width) {
   .categories {
-    width: 1220px;
-    padding: 0 40px 0 40px;
+    padding: 0 40px;
   }
 
   .categories__list {
