--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -29,7 +29,7 @@
 
 @media screen and (min-width: @tablet-width) {
   .copyright {
-    width: 162px;
+    width: 33%;
     margin: 0;
     padding: 0;
   }
