--- a/source/less/blocks/more-products.less
+++ b/source/less/blocks/more-products.less
@@ -83,7 +83,7 @@
   }
 }
 
-@media screen and (min-width: @tablet-width) {
+@media screen and (min-width: @desktop-width) {
   .more-products::after,
   .more-products::before {
     top: 85px;
