--- a/source/less/blocks/program-form-main.less
+++ b/source/less/blocks/program-form-main.less
@@ -1,6 +1,5 @@
 .program-form-main {
-  width: 320px;
-  margin: 0 auto;
+  .container();
 }
 
 .program-form-main__heading-page {
@@ -9,17 +8,7 @@
 }
 
 @media screen and (min-width: @tablet-width) {
-  .program-form-main {
-    width: @tablet-width;
-  }
-
   .program-form-main__heading-page {
     font-size: 60px;
-  }
-}
-
-@media screen and (min-width: @desktop-width) {
-  .program-form-main {
-    width: @desktop-width;
   }
 }
