--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -1,3 +1,18 @@
+.container() {
+  margin-right: auto;
+  margin-left: auto;
+  width: 320px;
+  box-sizing: border-box;
+
+  @media screen and (min-width: @tablet-width) {
+    width: @tablet-width;
+  }
+
+  @media screen and (min-width: @desktop-width) {
+    width: @desktop-width;
+  }
+}
+
 .no-outline() {
   outline: none;
   background: transparent;
@@ -19,16 +34,4 @@
   padding: 0;
   margin: 0;
   list-style: none;
-}
-
-.how-it-works-icon() {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: 0;
-  width: 60px;
-  height: 60px;
-  background-color: @color-green;
-  background-repeat: no-repeat;
-  background-position: center;
 }
