--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,8 @@
-@import "global/fonts";
-@import "global/commons";
+@import "vendor/normalize.css";
 @import "global/variables";
 @import "global/mixins";
+@import "global/fonts";
+@import "global/commons";
 @import "blocks/button";
 @import "blocks/label";
 @import "blocks/input";
