--- a/source/less/blocks/card-product.less
+++ b/source/less/blocks/card-product.less
@@ -1,6 +1,6 @@
 .card-product {
-  width: 280px;
-  padding: 0 20px 0 20px;
+  .container();
+  padding: 0 20px;
 }
 
 .card-product__item {
@@ -24,7 +24,8 @@
   text-transform: uppercase;
 }
 
-.card-product__packaging-pro {
+.card-product__packaging-pro,
+.card-product__packaging-slim {
   display: block;
   margin: -36px 0 10px 28px;
   font-family: @font-family-base;
@@ -36,14 +37,7 @@
 }
 
 .card-product__packaging-slim {
-  display: block;
   margin: -36px 0 10px 32px;
-  font-family: @font-family-base;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: @color-black;
-  text-transform: uppercase;
 }
 
 .card-product__product-characteristics {
@@ -62,7 +56,7 @@
   display: block;
   margin: -5px 0 25px 0;
   width: 100%;
-  padding: 10px 0 10px 0;
+  padding: 10px 0;
   font-family: @font-family-base;
   font-size: 16px;
   line-height: 20px;
