--- a/source/less/blocks/catalog-main.less
+++ b/source/less/blocks/catalog-main.less
@@ -1,6 +1,5 @@
 .catalog-main {
-  width: 320px;
-  margin: 0 auto;
+  .container();
 }
 
 .catalog-main__heading-page {
@@ -10,10 +9,6 @@
 }
 
 @media (min-width: @tablet-width) {
-  .catalog-main {
-    width: @tablet-width;
-  }
-
   .catalog-main__heading-page {
     margin: 62px 0 163px 30px;
     font-size: 60px;
@@ -21,10 +16,6 @@
 }
 
 @media (min-width: @desktop-width) {
-  .catalog-main {
-    width: @desktop-width;
-  }
-
   .catalog-main__heading-page {
     margin: 85px 0 163px 40px;
   }
