--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,6 +1,5 @@
 .catalog {
-  width: 320px;
-  margin: 0 auto;
+  .container();
 }
 
 .catalog__list {
@@ -13,8 +12,7 @@
 
 @media screen and (min-width: @tablet-width) {
   .catalog {
-    width: 708px;
-    padding: 0 30px 0 30px;
+    padding: 0 30px;
   }
 
   .catalog__list {
@@ -38,7 +36,6 @@
 
 @media screen and (min-width: @desktop-width) {
   .catalog {
-    width: 1220px;
-    padding: 0 40px 0 40px;
+    padding: 0 40px;
   }
 }
