--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,8 +1,5 @@
 .page-header {
-  display: flex;
-  flex-direction: column;
-  width: 320px;
-  margin: 0 auto;
+  .container();
 }
 
 .page-header__logo {
@@ -25,10 +22,9 @@
 
 @media screen and (min-width: @tablet-width) {
   .page-header {
-    flex-direction: row;
+    display: flex;
     justify-content: space-between;
-    width: 708px;
-    padding: 0 30px 0 30px;
+    padding: 0 30px;
   }
 
   .page-header__logo {
@@ -40,8 +36,7 @@
 
 @media screen and (min-width: @desktop-width) {
   .page-header {
-    width: 1220px;
-    padding: 0 40px 0 40px;
+    padding: 0 40px;
   }
 
   .page-header__logo {
