--- a/source/less/blocks/picking-program.less
+++ b/source/less/blocks/picking-program.less
@@ -1,6 +1,6 @@
 .picking-program {
-  width: 280px;
-  padding: 0 20px 0 20px;
+  .container();
+  padding: 0 20px;
 }
 
 .picking-program__text {
@@ -121,10 +121,10 @@
 }
 
 .picking-program__input-radio:checked + .picking-program__label-radio::before {
-  width: 10px;
-  height: 10px;
+  width: 30px;
+  height: 30px;
   background-color: @color-green;
-  box-shadow: 0 0 0 10px red;
+  box-shadow: inset 0 0 0 10px @color-white;
 }
 
 .picking-program__textarea {
@@ -167,8 +167,7 @@
 
 @media screen and (min-width: @tablet-width) {
   .picking-program {
-    width: 708px;
-    padding: 0 30px 0 30px;
+    padding: 0 30px;
   }
 
   .picking-program__text {
@@ -227,8 +226,7 @@
 
 @media screen and (min-width: @desktop-width) {
   .picking-program {
-    width: 1220px;
-    padding: 0 40px 0 40px;
+    padding: 0 40px;
   }
 
   .picking-program__fieldset-wrapper {
