--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,8 +1,10 @@
 .promo {
+  .container();
   position: relative;
-  width: 280px;
   height: 290px;
-  margin: 0 auto 35px auto;
+  padding: 0 20px;
+  margin-top: 0;
+  margin-bottom: 35px;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -34,7 +36,7 @@
 
 @media screen and (min-width: @tablet-width) {
   .promo {
-    width: 708px;
+    padding: 0 30px;
     min-height: 200px;
     margin-top: 65px;
   }
