--- a/source/less/blocks/real-example.less
+++ b/source/less/blocks/real-example.less
@@ -1,5 +1,5 @@
 .real-example {
-  margin: 0 auto;
+  .container();
   background-color: @color-light-grey;
 }
 
@@ -262,7 +262,6 @@
 
 @media screen and (min-width: @desktop-width) {
   .real-example {
-    width: 1300px;
     display: flex;
     justify-content: flex-start;
     border: none;
