--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -30,17 +30,13 @@
 }
 
 @media screen and (min-width: @tablet-width) {
+  .social {
+    width: 33%;
+  }
+
   .social__list {
     margin: 0;
-    margin-right: 50px;
     padding: 0;
     border: none;
-  }
-}
-
-@media screen and (min-width: @desktop-width) {
-  .social__list {
-    margin-right: 390px;
-    margin-left: 200px;
   }
 }
