--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -23,13 +23,13 @@
 @media screen and (min-width: @tablet-width) {
   .page-header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding: 0 30px;
+    padding: 24px 30px;
   }
 
   .page-header__logo {
     width: 177px;
-    margin-top: 24px;
     padding: 0;
   }
 }
