--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,7 +6,9 @@
 @import "blocks/button";
 @import "blocks/label";
 @import "blocks/input";
-@import "blocks/desktop-header-background";
+@import "blocks/radio";
+@import "blocks/checkbox";
+@import "blocks/banner-wrap";
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
